[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/DialogEditor/GraphEditor/GraphEditor.gd" type="Script" id=2]

[node name="GraphEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainWindow" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Toolbar" type="HBoxContainer" parent="HSplitContainer/MainWindow"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="DialogMenu" type="MenuButton" parent="HSplitContainer/MainWindow/Toolbar"]
margin_right = 52.0
margin_bottom = 20.0
text = "Dialog"
items = [ "Save", null, 0, false, false, 0, 0, null, "", false, "Save All", null, 0, false, false, 1, 0, null, "", false, "Bake", null, 0, false, false, 2, 0, null, "", false, "Bake All Opened", null, 0, false, false, 3, 0, null, "", false, "Bake All", null, 0, false, false, 4, 0, null, "", false, "close current", null, 0, false, false, 5, 0, null, "", false, "close All", null, 0, false, false, 6, 0, null, "", false ]

[node name="NodeMenu" type="MenuButton" parent="HSplitContainer/MainWindow/Toolbar"]
margin_left = 56.0
margin_right = 102.0
margin_bottom = 20.0
text = "Node"
items = [ "Start Node", null, 0, false, false, 0, 0, null, "", false, "Text Node", null, 0, false, false, 1, 0, null, "", false, "End Node", null, 0, false, false, 99, 0, null, "", false ]

[node name="TabContainer" type="TabContainer" parent="HSplitContainer/MainWindow"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="debug" type="Label" parent="HSplitContainer/MainWindow"]
margin_top = 586.0
margin_right = 1024.0
margin_bottom = 600.0
